--- a/SolidPractice/SolidPractice.csproj
+++ b/SolidPractice/SolidPractice.csproj
@@ -6,4 +6,10 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Remove="SRP\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="SRP\" />
+  </ItemGroup>
 </Project>
