OCP practice and have some errors.

--- a/SolidPractice/SolidPractice.csproj
+++ b/SolidPractice/SolidPractice.csproj
@@ -8,8 +8,10 @@
 
   <ItemGroup>
     <None Remove="SRP\" />
+    <None Remove="OCP\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="SRP\" />
+    <Folder Include="OCP\" />
   </ItemGroup>
 </Project>
