DIP Practice initial code

--- a/TestSolidPractice/TestSolidPractice.csproj
+++ b/TestSolidPractice/TestSolidPractice.csproj
@@ -23,10 +23,12 @@
     <None Remove="SRP\" />
     <None Remove="OCP\" />
     <None Remove="LSP\" />
+    <None Remove="DIP\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="SRP\" />
     <Folder Include="OCP\" />
     <Folder Include="LSP\" />
+    <Folder Include="DIP\" />
   </ItemGroup>
 </Project>
