--- a/SolidPractice/SolidPractice.csproj
+++ b/SolidPractice/SolidPractice.csproj
@@ -10,10 +10,12 @@
     <None Remove="SRP\" />
     <None Remove="OCP\" />
     <None Remove="LSP\" />
+    <None Remove="DIP\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="SRP\" />
     <Folder Include="OCP\" />
     <Folder Include="LSP\" />
+    <Folder Include="DIP\" />
   </ItemGroup>
 </Project>
