--- a/TestSolidPractice/TestSolidPractice.csproj
+++ b/TestSolidPractice/TestSolidPractice.csproj
@@ -24,11 +24,13 @@
     <None Remove="OCP\" />
     <None Remove="LSP\" />
     <None Remove="DIP\" />
+    <None Remove="ISP\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="SRP\" />
     <Folder Include="OCP\" />
     <Folder Include="LSP\" />
     <Folder Include="DIP\" />
+    <Folder Include="ISP\" />
   </ItemGroup>
 </Project>
